--- a/index.html
+++ b/index.html
@@ -9,17 +9,31 @@
 </head>
 <body>
 
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-md navbar-light bg-white py-3 position-relative">
   <div class="container position-relative">
-    <!-- 1) Logo móvil a color (siempre visible en mobile) -->
+    <!-- Logo móvil a color (sólo en <768px) -->
     <a class="navbar-brand mobile-logo d-md-none" href="#">
       <img src="./images/logo-bookmark.svg" alt="Logo" height="40">
     </a>
 
-    <!-- toggler -->
+    <!-- Logo escritorio (siempre visible ≥768px) -->
+    <a class="navbar-brand desktop-logo d-none d-md-block" href="#">
+      <img src="./images/logo-bookmark.svg" alt="Logo" height="40">
+    </a>
+
+    <!-- Menú de escritorio (oculto <768px) -->
+    <ul class="navbar-nav d-none d-md-flex align-items-center">
+      <li class="nav-item"><a class="nav-link" href="#">FEATURES</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">PRICING</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
+      <li class="nav-item">
+        <a class="btn btn-danger ms-3" href="#">LOGIN</a>
+      </li>
+    </ul>
+
+    <!-- Toggler (sólo móvil) -->
     <button
-      class="navbar-toggler collapsed"
+      class="navbar-toggler collapsed d-md-none"
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#navbarNav"
@@ -28,45 +42,37 @@
       aria-label="Toggle navigation"
     ></button>
 
+    <!-- Overlay móvil -->
     <div class="collapse navbar-collapse" id="navbarNav">
-      <!-- 2) Header móvil dentro del overlay (logo blanco + close) -->
       <div class="mobile-header d-md-none">
         <a class="navbar-brand" href="#">
           <img src="./images/logo-bookmark.svg" alt="Logo" height="40">
         </a>
       </div>
-
       <hr class="menu-divider d-md-none">
-
       <ul class="navbar-nav mx-auto d-md-none">
         <li class="nav-item"><a class="nav-link" href="#">FEATURES</a></li>
         <li class="nav-item"><a class="nav-link" href="#">PRICING</a></li>
         <li class="nav-item"><a class="nav-link" href="#">CONTACT</a></li>
       </ul>
-
       <a href="#" class="btn btn-outline-light btn-login d-md-none">LOGIN</a>
-
       <div class="social-icons d-md-none">
         <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
         <a href="#"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
       </div>
     </div>
-
-    <!-- logo de escritorio -->
-    <a class="navbar-brand d-none d-md-block" href="#">
-      <img src="./images/logo-bookmark.svg" alt="Logo" height="40">
-    </a>
   </div>
 </nav>
 
+
   <!-- Hero Section -->
   <section class="up-container position-relative">
-    <div class="blue-square"></div>
     <div class="container-2">
+      <div class="blue-square"></div>
       <div class="feature-flex-content bloque1">
         <h1>A Simple Book Manager</h1>
         <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus odio esse delectus aliquam sit suscipit dolores!</h3>
-        <div class="d-flex flex-column flex-md-row gap-2 mt-4">
+        <div class="btn-group flex-md-row gap-2 mt-4">
           <a class="btn btn-primary" href="#">Get it on Chrome</a>
           <a class="btn btn-outline-secondary" href="#">Get it on Firefox</a>
         </div>
@@ -86,20 +92,26 @@
   </section>
 
   <!-- Tabs Section -->
-  <section class="container-4 position-relative py-5">
+  <section class="container-4 position-relative">
     <div class="blue-square-2"></div>
     <div class="container">
-      <ul class="nav nav-tabs justify-content-center" id="featureTabs" role="tablist">
-        <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">Simple Bookmarking</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Speedy Searching</button>
-        </li>
-        <li class="nav-item" role="presentation">
-          <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab">Easy Sharing</button>
-        </li>
-      </ul>
+      <ul class="nav nav-tabs d-flex flex-column flex-md-row justify-content-center" id="featureTabs" role="tablist">
+  <li class="nav-item" role="presentation">
+    <button class="nav-link active mx-md-2" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">
+      Simple Bookmarking
+    </button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link mx-md-2" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">
+      Speedy Searching
+    </button>
+  </li>
+  <li class="nav-item" role="presentation">
+    <button class="nav-link mx-md-2" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab">
+      Easy Sharing
+    </button>
+  </li>
+</ul>
       <div class="tab-content py-4">
         <div class="tab-pane fade show active" id="tab1" role="tabpanel">
           <div class="container-2">
@@ -216,8 +228,8 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-primary text-white text-center py-5">
-    <div class="container">
+  <footer class="bg-primary">
+    <div class="container bg-primary text-white text-center py-5">
       <h4>35,000+ already joined</h4>
       <h3 class="mb-4">Stay up-to-date with what we're doing</h3>
       <form class="row justify-content-center">
@@ -229,20 +241,21 @@
         </div>
       </form>
     </div>
-  </footer>
-  <footer class="bg-dark text-white py-4">
-    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center">
-      <a href="#"><img src="./images/logo-bookmark.svg" height="40" alt="Logo"></a>
-      <ul class="nav justify-content-center my-3 my-md-0">
-        <li class="nav-item"><a class="nav-link text-white" href="#">Features</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Pricing</a></li>
-        <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
-      </ul>
-      <div>
-        <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
-        <a href="#" class="ms-3"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
-      </div>
-    </div>
+    <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center text-white">
+  <a href="#"><img src="./images/logo-bookmark.svg" height="40" alt="Logo"></a>
+
+  <ul class="nav me-auto my-3 my-md-0">
+    <li class="nav-item"><a class="nav-link text-white" href="#">Features</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="#">Pricing</a></li>
+    <li class="nav-item"><a class="nav-link text-white" href="#">Contact</a></li>
+  </ul>
+
+  <div>
+    <a href="#"><img src="./images/icon-facebook.svg" alt="Facebook"></a>
+    <a href="#" class="ms-3"><img src="./images/icon-twitter.svg" alt="Twitter"></a>
+  </div>
+</div>
+
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
